WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36700
REGRESSION (
r56182
): iWeb shadow drawn around image rectangle, not around opaque part of the image
https://bugs.webkit.org/show_bug.cgi?id=36700
Summary
REGRESSION (r56182): iWeb shadow drawn around image rectangle, not around opa...
Jean-Luc Evrard
Reported
2010-03-27 05:57:55 PDT
Hi, in some circumstances, a frame is appearing around images in web pages created with iWeb (see URL). Safari (Mac/PC) as well as IE8 render correctly. Firefox Mac last version does not... Curiously, the problem is only visible if the whole page is downloaded. regards.
Attachments
two screenshots
(1019.80 KB, application/zip)
2010-03-27 12:46 PDT
,
Jean-Luc Evrard
no flags
Details
Revert the CSSPrimitiveValue part of r56182
(9.84 KB, patch)
2010-03-27 15:05 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-03-27 11:56:12 PDT
I'm confused. If Firefox is the only browser that doesn't work correctly, why are you reporting this problem against WebKit? Or are you saying that this doesn't work in Safari when using a nightly build of WebKit? If so, could you please attach a screenshot, to make it more clear what problem you are seeing?
Jean-Luc Evrard
Comment 2
2010-03-27 12:46:25 PDT
Created
attachment 51838
[details]
two screenshots Two screenshots of affected/unaffected rendering
Jean-Luc Evrard
Comment 3
2010-03-27 12:47:33 PDT
Safari webkit (Mac) and Firefox are affected Safari 4 (Mac/Win) and IE8 are unaffected
Alexey Proskuryakov
Comment 4
2010-03-27 13:22:36 PDT
Thanks! Confirmed using
r56587
.
Alexey Proskuryakov
Comment 5
2010-03-27 13:23:01 PDT
<
rdar://problem/7801598
>
mitz
Comment 6
2010-03-27 13:37:15 PDT
This appears to be due to a change in shadow behavior in canvas.
mitz
Comment 7
2010-03-27 14:26:17 PDT
Caused by <
http://trac.webkit.org/changeset/56182
>. Presumably by the change to serialization of the transparent color. Presumably the content expects rgba(0, 0, 0, 0).
mitz
Comment 8
2010-03-27 14:30:39 PDT
From …Main/Scripts/iWebImage.js: p_alphaComponent : function(color) { var alpha=1.0; if (color && color.indexOf('rgba(') != -1) { if (color.match(/rgba\((?:\s*\S+\s*,\s*){3}(\S+)\s*\)/)) { alpha=RegExp.$1; } } return alpha; }
mitz
Comment 9
2010-03-27 15:05:33 PDT
Created
attachment 51843
[details]
Revert the CSSPrimitiveValue part of
r56182
Darin Adler
Comment 10
2010-03-27 17:36:28 PDT
Comment on
attachment 51843
[details]
Revert the CSSPrimitiveValue part of
r56182
r=me
mitz
Comment 11
2010-03-27 18:00:16 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/56673
>.
Eric Seidel (no email)
Comment 12
2010-03-27 18:42:20 PDT
This appears to have turned the leopard bots red.
Alexey Proskuryakov
Comment 13
2010-07-09 18:57:13 PDT
It would have been nice if there were a PASS/FAIL test for this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug