WebCore: <rdar://problem/7801598> REGRESSION (r56182): iWeb shadow drawn around image rectangle, not around opaque part of the image https://bugs.webkit.org/show_bug.cgi?id=36700

Reviewed by Darin Adler.

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::createColor): Reverted to returning an RGB color value rather than an
identifier for the transparent color.

LayoutTests: Updated results and one test for
<rdar://problem/7801598> REGRESSION (r56182): iWeb shadow drawn around image rectangle, not around opaque part of the image
https://bugs.webkit.org/show_bug.cgi?id=36700

Reviewed by Darin Adler.

* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/invalid-import-rule-insertion.html:
* http/tests/mime/standard-mode-does-not-load-stylesheet-with-text-plain-and-css-extension-expected.txt:
* http/tests/mime/standard-mode-does-not-load-stylesheet-with-text-plain-expected.txt:
* http/tests/security/cross-origin-css-expected.txt:
* http/tests/security/cross-origin-css-in-xml-expected.txt:
* platform/mac/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/qt/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/win/fast/css/getComputedStyle/computed-style-expected.txt:
* svg/css/getComputedStyle-basic-expected.txt:



Canonical link: https://commits.webkit.org/47967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56673 268f45cc-cd09-0410-ab3c-d52691b4dbfc